--- a/src/aceinternal/convertsys/convert.vcxproj
+++ b/src/aceinternal/convertsys/convert.vcxproj
@@ -166,7 +166,7 @@ XCOPY ..\..\..\bin\libs\libloggerd.dll ..\output\ /Y /R /F
     <ClCompile>
       <Optimization>Disabled</Optimization>
       <AdditionalIncludeDirectories>./src/serialize;./src;./protocal_factory;./protocal;./inc;../cachesys/inc;../cachesys/protocal;../cachesys/protocal_factory;../cachesys/src/serialize;./;../common/inc;../common/material-cpp;../../typedef/inc;../simplexml/inc/;../share/inc;../common/cachesys/inc;../logger/inc;../../../dep/mysql++-3.2.2/lib;../../../dep/boost_1_60_0/;../../../dep/mysql-connector-c-6.1.6/include;../../../dep/protobuf-2.6.1/src;../../../dep/ACE_wrappers/;../netcore/inc;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;MYSQLPP_NO_DLL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;MYSQLPP_NO_DLL;_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
       <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
       <PrecompiledHeader>
