--- a/src/aceinternal/plugin/manage_player/manage_player.vcxproj
+++ b/src/aceinternal/plugin/manage_player/manage_player.vcxproj
@@ -27,8 +27,9 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{722990BE-125F-47EB-9725-50300673C8D1}</ProjectGuid>
-    <RootNamespace>netcore</RootNamespace>
+    <ProjectName>ManagePlayer</ProjectName>
+    <ProjectGuid>{0052C33D-02A6-4D54-85E9-B1DA18476E87}</ProjectGuid>
+    <RootNamespace>manage_player</RootNamespace>
     <Keyword>Win32Proj</Keyword>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -47,13 +48,13 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>DynamicLibrary</ConfigurationType>
     <PlatformToolset>v140</PlatformToolset>
-    <CharacterSet>Unicode</CharacterSet>
+    <CharacterSet>MultiByte</CharacterSet>
     <WholeProgramOptimization>true</WholeProgramOptimization>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
     <ConfigurationType>DynamicLibrary</ConfigurationType>
     <PlatformToolset>v140</PlatformToolset>
-    <CharacterSet>Unicode</CharacterSet>
+    <CharacterSet>MultiByte</CharacterSet>
     <WholeProgramOptimization>true</WholeProgramOptimization>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -118,8 +119,8 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <Optimization>Disabled</Optimization>
-      <AdditionalIncludeDirectories>../share/inc;../logger/inc;../../../dep/ACE_wrappers/;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;_USRDLL;NETCORE_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <AdditionalIncludeDirectories>./inc;./src;../../typedef/inc;../../share/inc;../../logger/inc;../../scene/inc;../../gamelogic/inc;../../common/material-cpp;../../../../common/inc;../../cache/inc;../../../../common/material-cpp;../../terminal/inc;../../simplexml/inc;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;_USRDLL;MANAGE_PLAYER_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <MinimalRebuild>true</MinimalRebuild>
       <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
       <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
@@ -128,22 +129,22 @@
       <DebugInformationFormat>EditAndContinue</DebugInformationFormat>
     </ClCompile>
     <Link>
-      <AdditionalDependencies>aced.lib;libshared.lib;libloggerd.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <OutputFile>../../bin/libs/lib$(ProjectName)d.dll</OutputFile>
-      <AdditionalLibraryDirectories>../../bin/libs;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>libscened.lib;libshared.lib;libloggerd.lib;libsimplexmld.lib;libgamelogicd.lib;libprotobufd.lib;libprotobuf-lited.lib;libprotocold.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <OutputFile>../../../bin/libs/lib$(ProjectName).dll</OutputFile>
+      <AdditionalLibraryDirectories>../../../bin/libs;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <SubSystem>Windows</SubSystem>
       <TargetMachine>MachineX86</TargetMachine>
     </Link>
     <PostBuildEvent>
-      <Command>XCOPY ..\..\bin\libs\libnetcored.dll ..\..\bin\ /Y /R /F</Command>
+      <Command>XCOPY ..\..\..\bin\libs\lib$(ProjectName).dll ..\..\..\bin\modules /Y /R /F</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
       <Optimization>Disabled</Optimization>
-      <AdditionalIncludeDirectories>./inc;../share/inc;../logger/inc;../../../dep/ACE_wrappers/;../../../dep/boost_1_60_0/;../../../dep/protobuf-2.6.1/src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;_USRDLL;NETCORE_EXPORTS;_CRT_SECURE_NO_WARNINGS;_WIN64;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <AdditionalIncludeDirectories>./inc;./src;../../typedef/inc;../../share/inc;../../logger/inc;../../scene/inc;../../gamelogic/inc;../../common/material-cpp;../../../../common/inc;../../cache/inc;../../../../common/material-cpp;../../terminal/inc;../../simplexml/inc;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;_USRDLL;MANAGE_PLAYER_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
       <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
       <PrecompiledHeader>
@@ -152,29 +153,29 @@
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
     </ClCompile>
     <Link>
-      <AdditionalDependencies>../../../dep/ACE_wrappers/lib/ACEd.lib;share.lib;logger.lib;../../../dep/protobuf-2.6.1/lib/libprotobuf.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>$(OutDir);../../../dep/boost_1_60_0/lib64-msvc-14.0/;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>libscened.lib;libshared.lib;libloggerd.lib;libsimplexmld.lib;libgamelogicd.lib;libprotobufd.lib;libprotobuf-lited.lib;libprotocold.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <OutputFile>../../../bin/libs/lib$(ProjectName).dll</OutputFile>
+      <AdditionalLibraryDirectories>../../../bin/libs;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <SubSystem>Windows</SubSystem>
     </Link>
     <PostBuildEvent>
-      <Command>
-      </Command>
+      <Command>XCOPY ..\..\..\bin\libs\lib$(ProjectName).dll ..\..\..\bin\modules /Y /R /F</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
-      <AdditionalIncludeDirectories>./inc;./src;../typedef/inc;../logger/inc;../share/inc;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <PreprocessorDefinitions>WIN32;NDEBUG;_WINDOWS;_USRDLL;NETCORE_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <AdditionalIncludeDirectories>./inc;./src;../../typedef/inc;../../share/inc;../../logger/inc;../../scene/inc;../../gamelogic/inc;../../common/material-cpp;../../../../common/inc;../../cache/inc;../../../../common/material-cpp;../../terminal/inc;../../simplexml/inc;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <PreprocessorDefinitions>WIN32;NDEBUG;_WINDOWS;_USRDLL;MANAGE_PLAYER_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
       <PrecompiledHeader />
       <WarningLevel>Level3</WarningLevel>
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
     </ClCompile>
     <Link>
-      <AdditionalDependencies>ace.lib;libshare.lib;liblogger.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <OutputFile>../../bin/libs/lib$(ProjectName).dll</OutputFile>
-      <AdditionalLibraryDirectories>../../bin/libs;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>libscene.lib;libshare.lib;liblogger.lib;libprotobuf.lib;libprotobuf-lite.lib;libprotocol.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <OutputFile>../../../bin/libs/lib$(ProjectName).dll</OutputFile>
+      <AdditionalLibraryDirectories>../../../bin/libs;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <SubSystem>Windows</SubSystem>
       <OptimizeReferences>true</OptimizeReferences>
@@ -182,13 +183,13 @@
       <TargetMachine>MachineX86</TargetMachine>
     </Link>
     <PostBuildEvent>
-      <Command>XCOPY ..\..\bin\libs\libnetcore.dll ..\..\bin\ /Y /R /F</Command>
+      <Command>XCOPY ..\..\..\bin\libs\lib$(ProjectName).dll ..\..\..\bin\modules /Y /R /F</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
-      <AdditionalIncludeDirectories>./inc;./src;../typedef/inc;../logger/inc;../share/inc;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <PreprocessorDefinitions>WIN32;NDEBUG;_WINDOWS;_USRDLL;NETCORE_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <AdditionalIncludeDirectories>./inc;./src;../../typedef/inc;../../share/inc;../../logger/inc;../../scene/inc;../../gamelogic/inc;../../common/material-cpp;../../../../common/inc;../../cache/inc;../../../../common/material-cpp;../../terminal/inc;../../simplexml/inc;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <PreprocessorDefinitions>WIN32;NDEBUG;_WINDOWS;_USRDLL;MANAGE_PLAYER_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
       <PrecompiledHeader>
       </PrecompiledHeader>
@@ -196,32 +197,32 @@
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
     </ClCompile>
     <Link>
-      <AdditionalDependencies>ace.lib;libshare.lib;liblogger.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <OutputFile>../../bin/libs/lib$(ProjectName).dll</OutputFile>
-      <AdditionalLibraryDirectories>../../bin/libs;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>libscene.lib;libshare.lib;liblogger.lib;libprotobuf.lib;libprotobuf-lite.lib;libprotocol.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <OutputFile>../../../bin/libs/lib$(ProjectName).dll</OutputFile>
+      <AdditionalLibraryDirectories>../../../bin/libs;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <SubSystem>Windows</SubSystem>
       <OptimizeReferences>true</OptimizeReferences>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
     </Link>
     <PostBuildEvent>
-      <Command>XCOPY ..\..\bin\libs\libnetcore.dll ..\..\bin\ /Y /R /F</Command>
+      <Command>XCOPY ..\..\..\bin\libs\lib$(ProjectName).dll ..\..\..\bin\modules /Y /R /F</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='ReleaseD|Win32'">
     <ClCompile>
       <Optimization>Disabled</Optimization>
-      <AdditionalIncludeDirectories>./inc;./src;../typedef/inc;../logger/inc;../share/inc;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <PreprocessorDefinitions>WIN32;NDEBUG;_WINDOWS;_USRDLL;NETCORE_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <AdditionalIncludeDirectories>../../netstream/inc;./inc;../../common/cachesys/inc;./src;../../typedef/inc;../../share/inc;../../logger/inc;../../scene/inc;../../gamelogic/inc;../../common/material-cpp;../../../../common/inc;../../cache/inc;../../../../common/material-cpp;../../terminal/inc;../../simplexml/inc;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <PreprocessorDefinitions>WIN32;NDEBUG;_WINDOWS;_USRDLL;MANAGE_PLAYER_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
       <PrecompiledHeader />
       <WarningLevel>Level3</WarningLevel>
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
     </ClCompile>
     <Link>
-      <AdditionalDependencies>ace.lib;libshare.lib;liblogger.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <OutputFile>../../bin/libs/lib$(ProjectName).dll</OutputFile>
-      <AdditionalLibraryDirectories>../../bin/libs;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>libscene.lib;libshare.lib;liblogger.lib;libprotobuf.lib;libprotobuf-lite.lib;libprotocol.lib;libgamelogic.lib;ace.lib;libsimplexml.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <OutputFile>../../../bin/libs/lib$(ProjectName).dll</OutputFile>
+      <AdditionalLibraryDirectories>../../../bin/libs;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <SubSystem>Windows</SubSystem>
       <OptimizeReferences>true</OptimizeReferences>
@@ -229,14 +230,14 @@
       <TargetMachine>MachineX86</TargetMachine>
     </Link>
     <PostBuildEvent>
-      <Command>XCOPY ..\..\bin\libs\libnetcore.dll ..\..\bin\ /Y /R /F</Command>
+      <Command>XCOPY ..\..\..\bin\libs\lib$(ProjectName).dll ..\..\..\bin\modules /Y /R /F</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='ReleaseD|x64'">
     <ClCompile>
       <Optimization>Disabled</Optimization>
-      <AdditionalIncludeDirectories>./inc;./src;../typedef/inc;../logger/inc;../share/inc;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <PreprocessorDefinitions>WIN32;NDEBUG;_WINDOWS;_USRDLL;NETCORE_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <AdditionalIncludeDirectories>../../netstream/inc;./inc;../../common/cachesys/inc;./src;../../typedef/inc;../../share/inc;../../logger/inc;../../scene/inc;../../gamelogic/inc;../../common/material-cpp;../../../../common/inc;../../cache/inc;../../../../common/material-cpp;../../terminal/inc;../../simplexml/inc;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <PreprocessorDefinitions>WIN32;NDEBUG;_WINDOWS;_USRDLL;MANAGE_PLAYER_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
       <PrecompiledHeader>
       </PrecompiledHeader>
@@ -244,39 +245,31 @@
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
     </ClCompile>
     <Link>
-      <AdditionalDependencies>ace.lib;libshare.lib;liblogger.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <OutputFile>../../bin/libs/lib$(ProjectName).dll</OutputFile>
-      <AdditionalLibraryDirectories>../../bin/libs;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>libscene.lib;libshare.lib;liblogger.lib;libprotobuf.lib;libprotobuf-lite.lib;libprotocol.lib;libgamelogic.lib;ace.lib;libsimplexml.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <OutputFile>../../../bin/libs/lib$(ProjectName).dll</OutputFile>
+      <AdditionalLibraryDirectories>../../../bin/libs;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <SubSystem>Windows</SubSystem>
       <OptimizeReferences>true</OptimizeReferences>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
     </Link>
     <PostBuildEvent>
-      <Command>XCOPY ..\..\bin\libs\libnetcore.dll ..\..\bin\ /Y /R /F</Command>
+      <Command>XCOPY ..\..\..\bin\libs\lib$(ProjectName).dll ..\..\..\bin\modules /Y /R /F</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="src\CellSessionx.cpp" />
-    <ClCompile Include="src\InputSessionPool.cpp" />
-    <ClCompile Include="src\NetStream.cpp" />
-    <ClCompile Include="src\OutputSessionPool.cpp" />
-    <ClCompile Include="src\Sessionx.cpp" />
-    <ClCompile Include="src\SessionPoolAssistent.cpp" />
-    <ClCompile Include="src\SessionPoolFactory.cpp" />
-    <ClCompile Include="src\SessionPoolImp.cpp" />
+    <ClCompile Include="src\ManagePlayer.cpp" />
+    <ClCompile Include="src\md5.cpp" />
+    <ClCompile Include="src\PlayerAssistant.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="inc\netcore_def.h" />
-    <ClInclude Include="inc\Sessionx.h" />
-    <ClInclude Include="inc\SessionPoolx.h" />
-    <ClInclude Include="inc\SessionPoolFactory.h" />
-    <ClInclude Include="src\CellSessionx.h" />
-    <ClInclude Include="src\InputSessionPool.h" />
-    <ClInclude Include="src\NetStream.h" />
-    <ClInclude Include="src\OutputSessionPool.h" />
-    <ClInclude Include="src\SessionPoolAssistent.h" />
-    <ClInclude Include="src\SessionPoolImp.h" />
+    <ClInclude Include="src\ManagePlayer.h" />
+    <ClInclude Include="src\ManagePlayer_def.h" />
+    <ClInclude Include="src\md5.h" />
+    <ClInclude Include="src\PlayerAssistant.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="src\ManagePlayer.def" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
