--- a/src/aceinternal/share/share.vcxproj
+++ b/src/aceinternal/share/share.vcxproj
@@ -66,7 +66,7 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
       <Optimization>Disabled</Optimization>
-      <AdditionalIncludeDirectories>./inc;./src;../typedef/inc;../../../dep/boost_1_60_0/;../../../dep/ACE_wrappers/;../../../dep/protobuf-2.6.1/src</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>./inc;./src;../typedef/inc;../../../dep/boost_1_60_0/;../../../dep/ACE_wrappers/;../../../dep/protobuf-2.6.1/src;../netstream/inc</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;_USRDLL;SHARE_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
       <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
