--- a/src/aceinternal/test/test.vcxproj
+++ b/src/aceinternal/test/test.vcxproj
@@ -140,7 +140,7 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
       <Optimization>Disabled</Optimization>
-      <AdditionalIncludeDirectories>../../../dep/ACE_wrappers/;../logger/inc;../share/inc;../../../dep/boost_1_60_0/;../protobuf_dynamic_parse/inc;../../../dep/protobuf-2.6.1/src;../cache/inc;../scenex/inc;./;./src;../netstream/inc;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>../../../dep/ACE_wrappers/;../logger/inc;../share/inc;../../../dep/boost_1_60_0/;../dynamicparse/inc;../../../dep/protobuf-2.6.1/src;../cache/inc;../scenex/inc;./;./src;../netstream/inc;../../../dep/mysql++-3.2.2/lib;../../../dep/mysql-connector-c-6.1.6/include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
       <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
@@ -150,7 +150,7 @@
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
     </ClCompile>
     <Link>
-      <AdditionalDependencies>../../../dep/ACE_wrappers/lib/ACEd.lib;share.lib;logger.lib;protobuf_dynamic_parse.lib;../../../dep/protobuf-2.6.1/lib/libprotobuf.lib;../../../dep/mysql++-3.2.2/vc2008/x64/Debug/mysqlpp_d.lib;pool.lib;protocol.lib;cache.lib;netstream.lib;scenex.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>../../../dep/ACE_wrappers/lib/ACEd.lib;share.lib;logger.lib;dynamicparse.lib;../../../dep/protobuf-2.6.1/lib/libprotobuf.lib;../../../dep/mysql++-3.2.2/vc2008/x64/Debug/mysqlpp_d.lib;pool.lib;protocol.lib;cache.lib;netstream.lib;scenex.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalLibraryDirectories>$(OutDir);../../../dep/boost_1_60_0/lib64-msvc-14.0/;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <SubSystem>Console</SubSystem>
