--- a/src/aceinternal/dynamicparse/dynamicparse.vcxproj.filters
+++ b/src/aceinternal/dynamicparse/dynamicparse.vcxproj.filters
@@ -2,8 +2,16 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <ClInclude Include="inc\dynamicparse.h" />
+    <ClInclude Include="inc\dp_def.h">
+      <Filter>inc</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\dynamicparse.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <Filter Include="inc">
+      <UniqueIdentifier>{36bb9c13-8304-42db-8d4e-6d588e65a84c}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
 </Project>
