--- a/src/aceinternal/dynamicparse/dynamicparse.vcxproj.filters
+++ b/src/aceinternal/dynamicparse/dynamicparse.vcxproj.filters
@@ -1,17 +1,20 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClInclude Include="inc\dynamicparse.h" />
     <ClInclude Include="inc\dp_def.h">
       <Filter>inc</Filter>
     </ClInclude>
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="src\dynamicparse.cpp" />
+    <ClInclude Include="inc\dynamicparseimp.h" />
+    <ClInclude Include="inc\dynamicparse.h">
+      <Filter>inc</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="inc">
       <UniqueIdentifier>{36bb9c13-8304-42db-8d4e-6d588e65a84c}</UniqueIdentifier>
     </Filter>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="src\dynamicparseimp.cpp" />
   </ItemGroup>
 </Project>
