--- a/src/aceinternal/test/test.vcxproj.filters
+++ b/src/aceinternal/test/test.vcxproj.filters
@@ -1,28 +1,22 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="test">
+    <Filter Include="logger">
       <UniqueIdentifier>{cac1eacb-2107-4ad7-92b1-a6fd34cdea6b}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="src\CorrectTest.cpp">
-      <Filter>test</Filter>
-    </ClCompile>
-    <ClCompile Include="src\EffectTest.cpp">
-      <Filter>test</Filter>
-    </ClCompile>
     <ClCompile Include="src\main.cpp" />
+    <ClCompile Include="src\testlogger.cpp">
+      <Filter>logger</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\CorrectTest.h">
-      <Filter>test</Filter>
-    </ClInclude>
-    <ClInclude Include="src\EffectTest.h">
-      <Filter>test</Filter>
-    </ClInclude>
     <ClInclude Include="src\testnetcore.hpp" />
     <ClInclude Include="src\testpoo.hpp" />
     <ClInclude Include="src\testscenex.hpp" />
+    <ClInclude Include="src\testlogger.h">
+      <Filter>logger</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
